completed first travel agency task

--- a/index.html
+++ b/index.html
@@ -1,5 +1,31 @@
 <!DOCTYPE html>
 <html>
-  <head> </head>
-  <body></body>
+  <head>
+    <title>Travel Agency Blog</title>
+  </head>
+  <body>
+    <h1>Travel Agency Blog</h1>
+    <h3>Bringing you to the far...</h3>
+    <br />
+    <p>
+      Welcome to this basic 2000 travel agency site, we have many links... but
+      you know better than to click on suspicious links... right?
+    </p>
+    <ul>
+      <li>
+        <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Paris</a>
+      </li>
+      <li>Notre-Dame Cathedral (Cathedrale de Notre Dame de Paris)</li>
+      <li>Champs-Élysées</li>
+      <li>Arc de Triomphe</li>
+      <li>Latin Quarter</li>
+    </ul>
+    <ol>
+      <li>Do the first thing!</li>
+      <li>Then do the second thing..</li>
+      <li>Now do the third thing.</li>
+      <li>Do the forth thing!</li>
+      <li>Finally, when thats all done, do the fith thingy!!!</li>
+    </ol>
+  </body>
 </html>
